name:                lz4
version:             0.1.0.1
synopsis:            Haskell bindings to the lz4 compression library
description:         lz4 is a fast compression library, and can be found at
                     http://code.google.com/p/lz4/
                     a version that adds a C library can be found at
                     https://github.com/mwotton/lz4
homepage:            http://github.com/mwotton/lz4hs
license:             BSD3
license-file:        LICENSE
author:              Mark Wotton
maintainer:          mwotton@gmail.com

category:            Codec
build-type:          Simple
cabal-version:       >=1.8
source-repository head
  type:        git
  location:    git://github.com/mwotton/lz4hs.git

library
  exposed-modules: Codec.Compression.LZ4
  other-modules:   Codec.Compression.LZ4.Foreign
  hs-source-dirs:  src
  extra-libraries: lz4
  build-depends:   base ==4.5.*, bytestring

test-suite spec
  type:            exitcode-stdio-1.0
  main-is:         Spec.hs
  hs-source-dirs:  test
  extra-libraries: lz4
  build-depends:   base, hspec, hspec-discover, lz4, QuickCheck, hspec-shouldbe,
                   bytestring