name:                lz4
version:             0.0
synopsis:            LZ4 compression for ByteStrings
description:
  High level bindings to the LZ4 compression library.
  .
  Currently based on lz4 r75. C sources are included and no external
  dependencies are needed other than @cereal@.
homepage:            http://github.com/mwotton/lz4hs
bug-reports:         https://github.com/mwotton/lz4hs/issues
license:             BSD3
license-file:        LICENSE.txt
copyright:           Copyright (c) Mark Wotton, Austin Seipp 2012
author:              Mark Wotton <mwotton@gmail.com)
maintainer:          mwotton@gmail.com
category:            Codec
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  src/cbits/lz4.h, src/cbits/lz4.c,
  src/cbits/lz4hc.h, src/cbits/lz4hc.c
  tests/Properties.hs,
  README.md, AUTHORS.txt

source-repository head
  type: git
  location: https://github.com/mwotton/lz4hs

library
  hs-source-dirs:  src
  exposed-modules: Codec.Compression.LZ4
  build-depends:
    base >= 3 && < 5,
    bytestring,
    cereal

  c-sources:       src/cbits/lz4.c src/cbits/lz4hc.c
  include-dirs:    src/cbits

  ghc-options:     -Wall -O2 -fwarn-tabs
  default-language: Haskell2010

test-suite properties
  hs-source-dirs: tests
  main-is:        Properties.hs
  type:           exitcode-stdio-1.0

  build-depends:
    base >= 3 && < 5,
    bytestring,
    hspec >= 1.3, QuickCheck,
    HUnit,
    lz4

  ghc-options:      -fno-cse -fwarn-tabs
  default-language: Haskell2010

benchmark bench1
  hs-source-dirs: bench
  main-is:        Bench1.hs
  type:           exitcode-stdio-1.0

  build-depends:
    base           >= 4,
    bytestring,
    deepseq,
    criterion,
    lz4, quicklz, snappy

  ghc-options:      -Wall -fno-warn-orphans
  default-language: Haskell2010
